# curse_work

./: .gitignore  README.md  pyproject.toml
data/: operations.json
src/: func.py  main.py
tests/: test_func.py
