[tool.poetry]
name = "curse-work"
version = "0.1.0"
description = ""
authors = ["zixeel <strpan549@gmail.com >"]
readme = "README.md"
packages = [{include = "curse_work"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
